# SeiSM

./: .gitattributes  .gitignore  CEED_events_exploration.ipynb  README.md  SeiSM_playground.ipynb  cal_maps_visualize.ipynb  main.py  pyproject.toml  requirements-compute-canada.txt  requirements.txt  requirements2.txt  seism_architecture.drawio  slurm_setup.sh
.github/workflows/: test.yml
checkpoints/: ssm_spatial.pth
data/processed/: safenet_dataset.h5
notebooks/: data_augmentation.ipynb  evaluation.ipynb  waveform_prediction.ipynb
results/: bi_lstm_l_seed1.json  bi_lstm_l_seed2.json  bi_lstm_l_seed3.json  bi_lstm_l_seed4.json  bi_lstm_l_seed42.json  bi_lstm_m_seed1.json  bi_lstm_m_seed2.json  bi_lstm_m_seed3.json  bi_lstm_m_seed4.json  bi_lstm_m_seed42.json  mamba2_l_seed1.json  mamba2_l_seed2.json  mamba2_l_seed3.json  mamba2_l_seed4.json  mamba2_l_seed42.json  mamba2_m_seed1.json  mamba2_m_seed2.json  mamba2_m_seed3.json  mamba2_m_seed4.json  mamba2_m_seed42.json  mamba2_s_seed1.json  mamba2_s_seed2.json  mamba2_s_seed3.json  mamba2_s_seed4.json  mamba2_s_seed42.json  mamba2_xs_seed1.json  mamba2_xs_seed2.json  mamba2_xs_seed3.json  mamba2_xs_seed4.json  mamba2_xs_seed42.json  transformer_l_seed1.json  transformer_l_seed2.json  transformer_l_seed3.json  transformer_l_seed4.json  transformer_l_seed42.json  transformer_m_seed1.json  transformer_m_seed2.json  transformer_m_seed3.json  transformer_m_seed4.json  transformer_m_seed42.json  (+10 more)
results/analysis/: per_class_mae.csv  summary_table.csv
slurm/calculquebec/: train.sh  train_china.sh  train_focal.sh  train_reverse.sh  train_ssm_fauverick.sh  train_st.sh
slurm/trillium/: data_aug.sh  eval_ssm.sh  run_data_augmentation.sh  train_all_waveforms.sh  train_ssm.sh  train_ssm2.sh
slurm/trillium/images/: slurm_setup.sh  train_focal.sh
slurm/trillium/waveforms/: eval_ssm.sh  run_data_augmentation.sh  train_all_waveforms.sh  train_seeds_l.sh  train_seeds_m.sh  train_seeds_s.sh  train_seeds_xs.sh
src/: README.md  analyze_results.py  baseline_train.py  compare_models.py  eval_seism.py  evaluate_per_class.py  evaluate_waveform.py  main.py  main_multimodal.py  main_mutimodal.py  safenet_pipeline.py  safenet_pipeline_ceed.py  safenet_pipeline_china.py  ssm1_pipeline.py  test_profile.py  train_seism.py  waveform_train.py
src/data-processing/: README.md  ceed_loader.py  pipeline.py  split_data.py  validate_labeled_data.py
src/data-processing/CEED/: README.md  ceed_loader.py
src/data-processing/california/: README.md  cal_maps_visualize.ipynb  ceed_data_augmentation.py  ceed_loader.py  ceed_maps_builder.py  ceed_maps_pipeline.py  ceed_pipeline.py  download_ceed_waveforms.py  download_shapefiles.py  eq_map_generation.py  preprocess_full_pipeline.py  run_pre_processing.sh  run_preprocessing.sh
src/data-processing/data/: 1970-2021_11_EARTH_final_with_patchnum.csv  labels_mag_C_class4_for_eval_10y_in_11_16.pickle  png_list_to_patchxy.csv  testing_data.csv  (+9 more)
src/ift3710.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: README.md  __init__.py  mamba_minimal.py  quake_mamba2.py  quakewave_mamba.py  resnet.py  safenet_embeddings.py  seism.py  spatial_models.py
src/safenet_branch/: README.md  safenet_config.py  safenet_pipeline.py  safenet_pipeline_ceed.py  safenet_pipeline_china.py
src/utils/: __init__.py  binned_weighted_loss.py  dataset.py  download_wandb_model_weights.py  focal_loss.py  muon.py  preprocess_safenet.py
tests/: test_focal_loss.py  test_muon.py  test_quake_mamba2.py
(+17 files in other folders)
