[project]
name = "ift3710"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "bottleneck==1.6.0",
    "cartopy>=0.25.0",
    "causal-conv1d>=1.4.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dask==2025.3.1",
    "datasets",
    "decorator==5.2.1",
    "filelock==3.24.3",
    "fonttools==4.61.1",
    "fsspec>=2023.5.0,<=2026.2.0",
    "geopandas",
    "greenlet==3.3.2",
    "h5netcdf==1.8.1",
    "h5py",
    "hdf5plugin==6.0.0",
    "huggingface_hub",
    "idna==3.11",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "llvmlite==0.46.0",
    "locket==1.0.0",
    "lunardate",
    "lxml==6.0.2",
    "mamba-ssm",
    "markupsafe==3.0.3",
    "matplotlib",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "narwhals==2.16.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numba==0.64.0",
    "numpy<2",
    "obspy==1.4.2",
    "packaging==26.0",
    "pandas",
    "partd==1.4.2",
    "Pillow",
    "plotly==6.5.2",
    "pyarrow==23.0.1",
    "pyparsing==3.3.2",
    "pyproj<3.6.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "rasterio",
    "requests",
    "scikit-learn",
    "scipy",
    "seaborn>=0.13.2",
    "seisbench==0.11.0",
    "setuptools==80.10.2",
    "shapely",
    "six==1.17.0",
    "sqlalchemy==1.4.54",
    "sympy==1.14.0",
    "tensorboard",
    "tensorflow",
    "toolz==1.1.0",
    "torch~=2.5.0",
    "tqdm",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "wandb",
    "watchdog==6.0.0",
    "xarray==2026.2.0",
    "xdas==0.2.4",
    "xinterp==0.1.3",
]

[tool.uv]
override-dependencies = [
    "triton>=3.0.0; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
