[project]
name = "ift3710"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "matplotlib",
    "numpy<2",
    "pandas",
    "scikit-learn",
    "scipy",
    "torch~=2.5.0",
    "causal-conv1d>=1.4.0",
    "mamba-ssm",
    "tensorflow",
    "datasets",
    "fsspec>=2023.5.0,<=2026.2.0",
    "huggingface_hub",
    "geopandas",
    "pillow",
    "pyproj",
    "rasterio",
    "shapely",
    "h5py",
    "lunardate",
    "requests",
    "tensorboard",
    "wandb",
    "tqdm",
]

[tool.uv]
override-dependencies = [
    "triton>=3.0.0; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
